workspace = { members = [
  "net/wasabi",
  "saba_core",
  "ui/wasabi",
], exclude = [
  "build",
] }

[package]
name = "saba"
version = "0.1.0"
edition = "2021"
default-run = "saba"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:ui_wasabi", "dep:noli"]

[[bin]]
name = "saba"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
saba_core = { path = "./saba_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
ui_wasabi = { path = "./ui/wasabi", optional = true }
